@@ -182,6 +182,8 @@ Param(
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
         # Needed by JBoss Marshalling
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.io=ALL-UNNAMED"
+        # Needed by WildFly Http Client
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.net=ALL-UNNAMED"
         # Needed by WildFly Security Manager
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.security=ALL-UNNAMED"
         # Needed for marshalling of collections
@@ -362,10 +364,14 @@ Function Start-WildFly-Process {
 			pushd $JBOSS_HOME
 			& $JAVA $programArguments
 			if ($LastExitCode -eq 10){ # :shutdown(restart=true) was called
-			    Write-Host "Restarting..."
+			    Write-Host "INFO: Restarting..."
 				Start-WildFly-Process -programArguments $programArguments
-			}
-
+			} elseif ($LastExitCode -eq 20) { # :shutdown(perform-installation=true) was called
+                Write-Host "INFO: Executing the installation manager"
+                & "$JBOSS_HOME\bin\installation-manager.ps1" -installationHome "$JBOSS_HOME" -instMgrLogProperties "$JBOSS_CONFIG_DIR\logging.properties"
+                Write-Host "INFO: Restarting..."
+                Start-WildFly-Process -programArguments $programArguments
+            }
 		}finally{
 			popd
 		}
